--- a/ionic/CodeOrder/www/templates/orders.html
+++ b/ionic/CodeOrder/www/templates/orders.html
@@ -6,6 +6,8 @@
 <ion-content >
 
 
-   <h2>Pedidos Recentes</h2>
+   <ion-list>
+       <ion-item>#1234 - Total: R$22.33 - 2016-01-09 00:00:00</ion-item>
+   </ion-list>
 
 </ion-content>
